# Zerokku

./: .gitignore  Readme.md  main.py  mpv.py  pyproject.toml
assets/icons/black/: info.txt  x_namer.py
assets/icons/white/: info.txt
core/: __init__.py  anilist_api.py
core/downloader/: __init__.py  image_downloader.py
core/player/: overlay.py  player.py
core/reader/: overlay.py  reader.py
core/reader/Chapter 44/: ComicInfo.xml
database/: __init__.py  convert.py  model_pre.py  models.py
database/repo/: __init__.py  anime.py  library.py  media.py  user.py
extensions/: animepahe.py  to-be-hero-x-74jp.html
gui/: __init__.py  __int__.py
gui/common/: __init__.py  button.py  chip.py  collapsible.py  combo_box.py  dropdown.py  label.py  layout.py  mylabel.py  progress_bar.py  scroll_area.py  slider.py  stacked_widget.py  widget.py
gui/common/animation/: __init__.py  animation_manager.py  playground.py
gui/common/spinner/: __init__.py  configurator.py
gui/components/: __init__.py  card_box.py  category.py  container.py  hero_banner.py  media_card.py  review_card.py  skeleton.py  volume_widget.py  watch_card.py
gui/interface/: __init__.py  categroy.py  downloads.py  home.py  library.py  login.py  media_page.py  search.py  tags.json
gui/interface/reader/: overlays.py  reader.py
test/: async_time.py  playtime.py
utils/: __init__.py  cbz.py  enums.py  icon_manager.py  remove_svg_margin.py  scripts.py
